# grpc-bitcoin-prototype

./: CMakeLists.txt
flowchart/: part1.mmd  part2.mmd
proto/: block.proto  node.proto  node_service.proto  transaction.proto
src/: block.grpc.pb.cc  block.grpc.pb.h  block.pb.cc  block.pb.h  difficulty_adjuster.cpp  difficulty_adjuster.h  grpc_client.cpp  grpc_client.h  grpc_server.cpp  grpc_server.h  main.cpp  node.cpp  node.grpc.pb.cc  node.grpc.pb.h  node.h  node.pb.cc  node.pb.h  node_service.grpc.pb.cc  node_service.grpc.pb.h  node_service.pb.cc  node_service.pb.h  transaction.grpc.pb.cc  transaction.grpc.pb.h  transaction.pb.cc  transaction.pb.h  transaction_generator.cpp  transaction_generator.h
